# rust-tuf

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  MAINTAINERS  Makefile  README.md  appveyor.yml  clippy.toml  travis.sh
.github/workflows/: rust.yml
interop-tests/: Cargo.toml
interop-tests/src/: generate.rs  lib.rs  pretty.rs
interop-tests/tests/: test.rs
interop-tests/tests/metadata/: keys.json  regenerate-metadata.sh
interop-tests/tests/metadata/consistent-snapshot-false/0/repository/: snapshot.json
interop-tests/tests/metadata/consistent-snapshot-false/1/repository/: 1.root.json  root.json  timestamp.json
interop-tests/tests/metadata/consistent-snapshot-false/3/repository/: 1.root.json  timestamp.json
interop-tests/tests/metadata/consistent-snapshot-false/4/repository/: 2.root.json  4.root.json  root.json  snapshot.json
interop-tests/tests/metadata/consistent-snapshot-false/5/repository/: 3.root.json  root.json  snapshot.json  timestamp.json
interop-tests/tests/metadata/consistent-snapshot-true/0/repository/: timestamp.json
interop-tests/tests/metadata/consistent-snapshot-true/1/repository/: 1.targets.json  root.json
interop-tests/tests/metadata/consistent-snapshot-true/2/repository/: 1.snapshot.json  3.targets.json  timestamp.json
interop-tests/tests/metadata/consistent-snapshot-true/3/repository/: 2.targets.json  3.root.json  3.targets.json  4.root.json  root.json
interop-tests/tests/metadata/consistent-snapshot-true/4/repository/: 1.targets.json  2.snapshot.json  4.snapshot.json  4.targets.json  5.root.json  timestamp.json
interop-tests/tests/metadata/consistent-snapshot-true/5/repository/: 1.root.json  3.snapshot.json  4.snapshot.json  5.targets.json  6.targets.json  root.json
scripts/: Makefile  canonicalize.py  repo-maker.py  requirements.txt  test-repo.sh
src/: asn1.rs  cjson.rs  client.rs  core.rs  crypto.rs  der.rs  error.rs  format_hex.rs  http.rs  into_async_read.rs  lib.rs  macros.rs  main.rs  metadata.rs  repo_builder.rs  repository.rs  rsa.rs  shims.rs  tuf.rs  util.rs  verify.rs
src/interchange/: cjson.rs  mod.rs
src/interchange/cjson/: mod.rs  pretty.rs  shims.rs
src/metadata/: metadata.rs  mod.rs  shims.rs
src/metadata/interchange/: cjson.rs  mod.rs
src/repository/: ephemeral.rs  error_repo.rs  file_system.rs  http.rs  track_repo.rs
src/rsa/: der.rs  mod.rs
tests/: integration.rs  simple_example.rs  tests.rs  vectors.rs  vectors.rs.ignore
tests/cjson/: root.cjson  root.json
tests/ed25519/: ed25519-1.pk8  ed25519-1.spki.der
tests/interop/: main.rs
tests/interop/fuchsia-go-tuf-5527fe/: .gitattributes  README.md
tests/interop/fuchsia-go-tuf-transition-M4/: README.md
tests/metadata/: generate.rs  regenerate-metadata.sh
tests/metadata/consistent-snapshot-false/1/repository/: 2.root.json  snapshot.json  targets.json
tests/metadata/consistent-snapshot-false/2/repository/: root.json  snapshot.json  targets.json  timestamp.json
tests/metadata/consistent-snapshot-false/3/repository/: root.json  targets.json  timestamp.json
tests/metadata/consistent-snapshot-false/4/repository/: 3.root.json  4.root.json  root.json  targets.json
tests/metadata/consistent-snapshot-false/5/repository/: 5.root.json  root.json  targets.json  timestamp.json
tests/metadata/consistent-snapshot-true/0/repository/: timestamp.json
tests/metadata/consistent-snapshot-true/1/repository/: 2.root.json  2.snapshot.json  timestamp.json
tests/metadata/consistent-snapshot-true/2/repository/: 1.root.json  2.targets.json  3.root.json  3.snapshot.json  3.targets.json
tests/metadata/consistent-snapshot-true/3/repository/: 3.root.json  4.snapshot.json  root.json
tests/metadata/consistent-snapshot-true/4/repository/: 5.root.json  5.snapshot.json  timestamp.json
tests/metadata/consistent-snapshot-true/5/repository/: 2.root.json  5.root.json  6.root.json  6.snapshot.json  6.targets.json
tests/repo-1/: root.json
tests/repo-1/keys/: root.priv  root.pub  snapshot.priv  snapshot.pub  targets.priv  targets.pub  timestamp.priv  timestamp.pub
tests/repo-1/meta/: root.cjson  root.json  snapshot.json  targets.json  timestamp.json
tests/repo-1/metadata/: snapshot.json  timestamp.json
tests/repo-1/metadata/latest/: targets.json
tests/repo-1/targets/: big-file.txt  hack-eryone.sh
tests/rsa/: pkcs1-1.pub  pkcs1-2.pub  rsa-2048-private-key.pk8  rsa-4096-private-key.pk8  spki-2.pub  spki.pub
tuf/: Cargo.toml
tuf/src/: client.rs  crypto.rs  database.rs  error.rs  lib.rs  metadata.rs  repo_builder.rs  repository.rs  tuf.rs  util.rs  verify.rs
tuf/src/interchange/: mod.rs
tuf/src/interchange/cjson/: mod.rs  pretty.rs  shims.rs
tuf/src/pouf/: mod.rs
tuf/src/pouf/cjson/: mod.rs  pretty.rs
tuf/src/pouf/pouf1/: mod.rs  shims.rs
tuf/src/repository/: ephemeral.rs  error_repo.rs  file_system.rs  http.rs  track_repo.rs
tuf/tests/: integration.rs  simple_example.rs
