[package]
name = "tuf"
version = "0.3.0-alpha3"
authors = [ "heartsucker <heartsucker@autistici.org>" ]
description = "Library for The Update Framework (TUF)"
homepage = "https://github.com/heartsucker/rust-tuf"
repository = "https://github.com/heartsucker/rust-tuf"
documentation = "https://docs.rs/tuf"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = [ "security", "update", "repository" ]
categories = [ "cryptography" ]

[badges]
travis-ci = { repository = "heartsucker/rust-tuf", branch = "master" }
appveyor = { repository = "heartsucker/rust-tuf", branch = "master", service = "github" }
codecov = { repository = "heartsucker/rust-tuf", branch = "master", service = "github" }

[lib]
name = "tuf"
path = "./src/lib.rs"

[dependencies]
bytes = "0.4"
chrono = { version = "0.4", features = [ "serde" ] }
data-encoding = "2.0.0-rc.2"
derp = "0.0.10"
futures = "0.1"
futures-cpupool = "0.1"
futures-fs = "0.0.4"
http = "0.1"
hyper = "0.12"
itoa = "0.4"
log = "0.4"
ring = { version = "0.12", features = [ "rsa_signing" ] }
serde = "1"
serde_derive = "1"
serde_json = "1"
tempfile = "3"
tokio = "0.1"
tokio-serde = "0.2"
untrusted = "0.5"
url = "1"

[dev-dependencies]
lazy_static = "1"
maplit = "1"
tempdir = "0.3"
