[package]
name = "tuf"
edition = "2018"
version = "0.3.0-alpha3"
authors = [ "heartsucker <heartsucker@autistici.org>" ]
description = "Library for The Update Framework (TUF)"
homepage = "https://github.com/heartsucker/rust-tuf"
repository = "https://github.com/heartsucker/rust-tuf"
documentation = "https://docs.rs/tuf"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = [ "security", "update", "repository" ]
categories = [ "cryptography" ]

[badges]
travis-ci = { repository = "heartsucker/rust-tuf", branch = "master" }
appveyor = { repository = "heartsucker/rust-tuf", branch = "master", service = "github" }
codecov = { repository = "heartsucker/rust-tuf", branch = "master", service = "github" }

[lib]
name = "tuf"
path = "./src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
data-encoding = "2.0.0-rc.2"
derp = "0.0.11"
futures-preview = "0.3.0-alpha.10"
hyper = "0.10"
itoa = "0.4"
log = "0.4"
ring = { version = "0.13", features = [ "rsa_signing" ] }
serde = "1"
serde_derive = "1"
serde_json = "1"
tempfile = "3"
untrusted = "0.6"

[dev-dependencies]
lazy_static = "1"
maplit = "1"
