[package]
name = "interop-tests"
version = "0.1.0"
authors = [ "heartsucker <heartsucker@autistici.org>", "Erick Tryzelaar <etryzelaar@google.com>" ]
description = "TUF library interoperation tests"
homepage = "https://github.com/theupdateframework/rust-tuf"
repository = "https://github.com/theupdateframework/rust-tuf"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
data-encoding = "2.0.0-rc.2"
futures-executor = "0.3.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
tuf = { version = "0.3.0-beta10", path = "../tuf" }
walkdir = "2.3.2"

[dev-dependencies]
assert_matches = "1.5.0"
futures-util = { version = "0.3.1", features = [ "io" ] }
pretty_assertions = "1"
tempfile = "3"

[[bin]]
name = "generate"
path = "src/generate.rs"
