[package]
name = "tuf"
edition = "2018"
version = "0.3.0-beta5"
authors = [ "heartsucker <heartsucker@autistici.org>", "Erick Tryzelaar <etryzelaar@google.com>" ]
description = "Library for The Update Framework (TUF)"
homepage = "https://github.com/theupdateframework/rust-tuf"
repository = "https://github.com/theupdateframework/rust-tuf"
documentation = "https://docs.rs/tuf"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = [ "security", "update", "repository" ]
categories = [ "cryptography" ]

[lib]
name = "tuf"
path = "./src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
data-encoding = "2.0.0-rc.2"
derp = "0.0.14"
futures-io = "0.3.1"
futures-util = { version = "0.3.1", features = [ "io" ] }
http = "0.2.0"
hyper_013 = { package = "hyper", version = "0.13.2", default-features = false, features = [ "stream" ], optional = true }
hyper_014 = { package = "hyper", version = "0.14.15", default-features = false, features = [ "stream", "client", "http1" ], optional = true }
itoa = "0.4"
log = "0.4"
percent-encoding = "2.1"
ring = { version = "0.16" }
serde = "1"
serde_derive = "1"
serde_json = "1"
tempfile = "3"
thiserror = "1.0"
untrusted = "0.7"
url = "2"

[dev-dependencies]
futures-executor = "0.3.1"
lazy_static = "1"
maplit = "1"
matches = "0.1.8"
pretty_assertions = "1"

[features]
default = ["hyper_014/tcp"]

# FIXME(https://github.com/theupdateframework/rust-tuf/issues/329) - RSA key
# support does not yet conform to the TUF spec, so it is disabled by default.
# As a # warning it may experience breaking changes without a major version
# bump.
unstable_rsa = []
